chore: add pagination to documentation
